--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lightgallery": "^2.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.1.0",
     "react-router-dom": "^6.23.0",
     "react-slick": "^0.30.2",
